UI filter And fix UI

--- a/ProjectDiamondShop/ProjectDiamondShop.csproj
+++ b/ProjectDiamondShop/ProjectDiamondShop.csproj
@@ -238,50 +238,100 @@
     <Content Include="Image\SlideDiamond\asscher1.jpg" />
     <Content Include="Image\SlideDiamond\asscher2.jpg" />
     <Content Include="Image\SlideDiamond\asscher3.jpg" />
+    <Content Include="Image\SlideDiamond\asscherring.jpg" />
+    <Content Include="Image\SlideDiamond\asscherring1.jpg" />
+    <Content Include="Image\SlideDiamond\asscherring2.jpg" />
+    <Content Include="Image\SlideDiamond\asscherring3.jpg" />
+    <Content Include="Image\SlideDiamond\baguette.jpg" />
     <Content Include="Image\SlideDiamond\baguette.png" />
+    <Content Include="Image\SlideDiamond\baguette1.jpg" />
     <Content Include="Image\SlideDiamond\baguette1.png" />
+    <Content Include="Image\SlideDiamond\baguette2.jpg" />
     <Content Include="Image\SlideDiamond\baguette2.png" />
+    <Content Include="Image\SlideDiamond\baguette3.jpg" />
     <Content Include="Image\SlideDiamond\baguette3.png" />
+    <Content Include="Image\SlideDiamond\baguettering.jpg" />
+    <Content Include="Image\SlideDiamond\baguettering1.jpg" />
     <Content Include="Image\SlideDiamond\cushion.png" />
     <Content Include="Image\SlideDiamond\cushion1.jpg" />
     <Content Include="Image\SlideDiamond\cushion2.png" />
     <Content Include="Image\SlideDiamond\cushion3.jpg" />
+    <Content Include="Image\SlideDiamond\cushionring.jpg" />
+    <Content Include="Image\SlideDiamond\cushionring1.jpg" />
+    <Content Include="Image\SlideDiamond\cushionring2.jpg" />
+    <Content Include="Image\SlideDiamond\cushionring3.jpg" />
     <Content Include="Image\SlideDiamond\emerald.jpg" />
     <Content Include="Image\SlideDiamond\emerald1.png" />
     <Content Include="Image\SlideDiamond\emerald2.jpg" />
     <Content Include="Image\SlideDiamond\emerald4.jpg" />
+    <Content Include="Image\SlideDiamond\emeraldring.jpg" />
+    <Content Include="Image\SlideDiamond\emeraldring1.jpg" />
+    <Content Include="Image\SlideDiamond\emeraldring2.jpg" />
+    <Content Include="Image\SlideDiamond\emeraldring3.jpg" />
     <Content Include="Image\SlideDiamond\heart1.png" />
     <Content Include="Image\SlideDiamond\heart2.png" />
     <Content Include="Image\SlideDiamond\heart3.png" />
     <Content Include="Image\SlideDiamond\heart4.jpg" />
+    <Content Include="Image\SlideDiamond\heartring.jpg" />
+    <Content Include="Image\SlideDiamond\heartring1.jpg" />
+    <Content Include="Image\SlideDiamond\heartring2.jpg" />
+    <Content Include="Image\SlideDiamond\heartring3.jpg" />
     <Content Include="Image\SlideDiamond\marquise.jpg" />
     <Content Include="Image\SlideDiamond\marquise2.jpg" />
     <Content Include="Image\SlideDiamond\marquise3.jpg" />
+    <Content Include="Image\SlideDiamond\marquisering.jpg" />
+    <Content Include="Image\SlideDiamond\marquisering1.jpg" />
+    <Content Include="Image\SlideDiamond\marquisering2.jpg" />
+    <Content Include="Image\SlideDiamond\marquisering3.jpg" />
     <Content Include="Image\SlideDiamond\merquise1.png" />
     <Content Include="Image\SlideDiamond\oval1.jpg" />
     <Content Include="Image\SlideDiamond\oval2.jpg" />
     <Content Include="Image\SlideDiamond\oval3.jpg" />
     <Content Include="Image\SlideDiamond\oval4.jpg" />
+    <Content Include="Image\SlideDiamond\ovalring.jpg" />
+    <Content Include="Image\SlideDiamond\ovalring1.jpg" />
+    <Content Include="Image\SlideDiamond\ovalring2.jpg" />
+    <Content Include="Image\SlideDiamond\ovalring3.jpg" />
     <Content Include="Image\SlideDiamond\pear.jpg" />
     <Content Include="Image\SlideDiamond\pear.png" />
     <Content Include="Image\SlideDiamond\pear1.jpg" />
     <Content Include="Image\SlideDiamond\pear2.jpg" />
+    <Content Include="Image\SlideDiamond\pearring.jpg" />
+    <Content Include="Image\SlideDiamond\pearring1.jpg" />
+    <Content Include="Image\SlideDiamond\pearring2.jpg" />
+    <Content Include="Image\SlideDiamond\pearring3.jpg" />
     <Content Include="Image\SlideDiamond\princess.jpg" />
     <Content Include="Image\SlideDiamond\princess1.jpg" />
     <Content Include="Image\SlideDiamond\princess2.jpg" />
     <Content Include="Image\SlideDiamond\princess3.jpg" />
+    <Content Include="Image\SlideDiamond\princessring.jpg" />
+    <Content Include="Image\SlideDiamond\princessring1.jpg" />
+    <Content Include="Image\SlideDiamond\princessring2.jpg" />
+    <Content Include="Image\SlideDiamond\princessring3.jpg" />
     <Content Include="Image\SlideDiamond\radiant.png" />
     <Content Include="Image\SlideDiamond\radiant1.jpg" />
     <Content Include="Image\SlideDiamond\radiant2.jpg" />
     <Content Include="Image\SlideDiamond\radiant3.png" />
+    <Content Include="Image\SlideDiamond\radiantring.jpg" />
+    <Content Include="Image\SlideDiamond\radiantring1.jpg" />
+    <Content Include="Image\SlideDiamond\radiantring2.jpg" />
+    <Content Include="Image\SlideDiamond\radiantring3.jpg" />
     <Content Include="Image\SlideDiamond\round.jpg" />
     <Content Include="Image\SlideDiamond\round1.jpg" />
     <Content Include="Image\SlideDiamond\round2.jpg" />
     <Content Include="Image\SlideDiamond\round4.jpg" />
+    <Content Include="Image\SlideDiamond\roundring.jpg" />
+    <Content Include="Image\SlideDiamond\roundring1.jpg" />
+    <Content Include="Image\SlideDiamond\roundring2.jpg" />
+    <Content Include="Image\SlideDiamond\roundring3.jpg" />
     <Content Include="Image\SlideDiamond\trillion1.jpg" />
     <Content Include="Image\SlideDiamond\trillion2.jpg" />
     <Content Include="Image\SlideDiamond\trillion3.jpg" />
     <Content Include="Image\SlideDiamond\trillion4.jpg" />
+    <Content Include="Image\SlideDiamond\trillionring.jpg" />
+    <Content Include="Image\SlideDiamond\trillionring1.jpg" />
+    <Content Include="Image\SlideDiamond\trillionring2.jpg" />
+    <Content Include="Image\SlideDiamond\trillionring3.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.9.1.js" />
@@ -320,21 +370,9 @@
     <Content Include="Views\web.config" />
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.9.1.min.map" />
-    <Content Include="Views\Introduce\Round.cshtml" />
     <Content Include="Views\SignUp\SignUpPage.cshtml">
       <BrowseToURL>~/signup/index</BrowseToURL>
     </Content>
-    <Content Include="Views\Introduce\Heart.cshtml" />
-    <Content Include="Views\Introduce\Oval.cshtml" />
-    <Content Include="Views\Introduce\Pear.cshtml" />
-    <Content Include="Views\Introduce\Cushion.cshtml" />
-    <Content Include="Views\Introduce\Radiant.cshtml" />
-    <Content Include="Views\Introduce\Asscher.cshtml" />
-    <Content Include="Views\Introduce\Baguette.cshtml" />
-    <Content Include="Views\Introduce\Emerald.cshtml" />
-    <Content Include="Views\Introduce\Marquise.cshtml" />
-    <Content Include="Views\Introduce\Princess.cshtml" />
-    <Content Include="Views\Introduce\Trillion.cshtml" />
     <Content Include="Views\Login\LoginPage.cshtml">
       <BrowseToURL>~/Login/index</BrowseToURL>
     </Content>
@@ -343,6 +381,18 @@
     <Content Include="Views\Diamonds\Diamonds.cshtml">
       <BrowseToURL>~/diamonds/index</BrowseToURL>
     </Content>
+    <Content Include="Views\Introduce\Asscher.cshtml" />
+    <Content Include="Views\Introduce\Baguette.cshtml" />
+    <Content Include="Views\Introduce\Cushion.cshtml" />
+    <Content Include="Views\Introduce\Emerald.cshtml" />
+    <Content Include="Views\Introduce\Heart.cshtml" />
+    <Content Include="Views\Introduce\Marquise.cshtml" />
+    <Content Include="Views\Introduce\Oval.cshtml" />
+    <Content Include="Views\Introduce\Pear.cshtml" />
+    <Content Include="Views\Introduce\Princess.cshtml" />
+    <Content Include="Views\Introduce\Radiant.cshtml" />
+    <Content Include="Views\Introduce\Round.cshtml" />
+    <Content Include="Views\Introduce\Trillion.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
