--- a/ProjectDiamondShop/Web.config
+++ b/ProjectDiamondShop/Web.config
@@ -10,12 +10,17 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	  <add key="smtp:host" value="smtp.gmail.com" />
+	  <add key="smtp:port" value="587" />
+	  <add key="smtp:username" value="huyh69185@gmail.com" />
+	  <add key="smtp:password" value="dmgxfkkvdbfbatbg" />
+	  <add key="smtp:from" value="huyh69185@gmail.com" />
   </appSettings>
 
 	<connectionStrings>
-		<!--<add name="DefaultConnection" connectionString="data source=HUY\HUY;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />-->
+		<add name="DefaultConnection" connectionString="data source=HUY\HUY;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />
 		<!--Huấn Đã Đến-->
-		<add name="DefaultConnection" connectionString="data source=DESKTOP-Q4GCJP9;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />
+		<!--<add name="DefaultConnection" connectionString="data source=DESKTOP-Q4GCJP9;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />-->
 	</connectionStrings>
 
 	<system.web>
