--- a/ProjectDiamondShop/Web.config
+++ b/ProjectDiamondShop/Web.config
@@ -18,7 +18,7 @@
   </appSettings>
 
 	<connectionStrings>
-		<add name="DefaultConnection" connectionString="data source=HUY\HUY;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />
+		<add name="DefaultConnection" connectionString="data source=NGUYEN\NGUYEN;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />
 		<!--Huấn Đã Đến-->
 		<!--<add name="DefaultConnection" connectionString="data source=DESKTOP-Q4GCJP9;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />-->
 	</connectionStrings>
