--- a/ProjectDiamondShop/bin/ProjectDiamondShop.dll.config
+++ b/ProjectDiamondShop/bin/ProjectDiamondShop.dll.config
@@ -18,9 +18,9 @@
   </appSettings>
 
 	<connectionStrings>
-		<add name="DefaultConnection" connectionString="data source=HUY\HUY;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />
+		<!--<add name="DefaultConnection" connectionString="data source=HUY\HUY;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />-->
 		<!--Huấn Đã Đến-->
-		<!--<add name="DefaultConnection" connectionString="data source=DESKTOP-Q4GCJP9;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />-->
+		<add name="DefaultConnection" connectionString="data source=DESKTOP-Q4GCJP9;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 
 	<system.web>
