--- a/ProjectDiamondShop/ProjectDiamondShop.csproj
+++ b/ProjectDiamondShop/ProjectDiamondShop.csproj
@@ -371,6 +371,7 @@
     <Compile Include="Models\Diamond.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\ViewOrderViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CartHelper.cs" />
     <Compile Include="Repositories\DiamondRepository.cs" />
@@ -411,6 +412,7 @@
     <Content Include="Views\Order\UpdateOrderDetails.cshtml" />
     <Content Include="Views\Cart\Index.cshtml" />
     <Content Include="Views\Diamonds\ViewDiamond.cshtml" />
+    <Content Include="Views\Home\ViewOrder.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
