--- a/ProjectDiamondShop/Web.config
+++ b/ProjectDiamondShop/Web.config
@@ -20,7 +20,7 @@
 	<connectionStrings>
 		<!--<add name="DefaultConnection" connectionString="data source=HUY\HUY;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />-->
 		<!--Huấn Đã Đến-->
-		<add name="DefaultConnection" connectionString="data source=MSI;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />
+		<add name="DefaultConnection" connectionString="data source=NGUYEN\NGUYEN;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 
 	<system.web>
