--- a/ProjectDiamondShop/ProjectDiamondShop.csproj
+++ b/ProjectDiamondShop/ProjectDiamondShop.csproj
@@ -359,6 +359,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\IntroduceController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\ManagerController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\SaleStaffController.cs" />
     <Compile Include="Controllers\SignUpController.cs" />
@@ -369,9 +370,11 @@
     <Compile Include="Models\Cart.cs" />
     <Compile Include="Models\CartItem.cs" />
     <Compile Include="Models\Diamond.cs" />
+    <Compile Include="Models\ManagerViewModel.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\ViewOrderViewModel.cs" />
+    <Compile Include="Models\Voucher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CartHelper.cs" />
     <Compile Include="Repositories\DiamondRepository.cs" />
@@ -413,6 +416,8 @@
     <Content Include="Views\Cart\Index.cshtml" />
     <Content Include="Views\Diamonds\ViewDiamond.cshtml" />
     <Content Include="Views\Home\ViewOrder.cshtml" />
+    <Content Include="Views\Manager\CreateVoucher.cshtml" />
+    <Content Include="Views\Manager\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
