Fix Đóng Lỗi của Manage,Delivery,SaleStaff

--- a/ProjectDiamondShop/Web.config
+++ b/ProjectDiamondShop/Web.config
@@ -19,10 +19,10 @@
 
 	<connectionStrings>
 		
-		<!--<add name="DefaultConnection" connectionString="data source=HUY\HUY;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />-->
+		<add name="DefaultConnection" connectionString="data source=HUY\HUY;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />
 		<!--Huấn Đã Đến-->
 		<!--<add name="DefaultConnection" connectionString="data source=NGUYEN\NGUYEN;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />-->
-	    <add name="DefaultConnection" connectionString="data source=MSI\THINH;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />
+	    <!--<add name="DefaultConnection" connectionString="data source=MSI\THINH;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />-->
 	</connectionStrings>
 
 	<system.web>
