--- a/ProjectDiamondShop/bin/ProjectDiamondShop.dll.config
+++ b/ProjectDiamondShop/bin/ProjectDiamondShop.dll.config
@@ -16,19 +16,13 @@
 		<add key="smtp:password" value="dmgxfkkvdbfbatbg" />
 		<add key="smtp:from" value="huyh69185@gmail.com" />
 
-		<!-- api vnpay config-->
-		<add key="vnp_Url" value="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"/>
-		<add key="vnp_Api" value="https://sandbox.vnpayment.vn/merchant_webapi/api/transaction"/>
-		<add key="vnp_TmnCode" value="TROHK8W7"/>
-		<add key="vnp_HashSecret" value="0CVB8T15YCKLQ1BWZR225OYAMILACDKN"/>
-		<add key="vnp_Returnurl" value="http://localhost:16262/vnpay_return.aspx"/>
 	</appSettings>
 
 	<connectionStrings>
 
-		<add name="DefaultConnection" connectionString="data source=DESKTOP-Q4GCJP9;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />
+		<!--<add name="DefaultConnection" connectionString="data source=DESKTOP-Q4GCJP9;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />-->
 		<!--Huấn Đã Đến-->
-		<!--<add name="DefaultConnection" connectionString="data source=NGUYEN\NGUYEN;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />-->
+		<add name="DefaultConnection" connectionString="data source=NGUYEN\NGUYEN;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />
 		<!--<add name="DefaultConnection" connectionString="data source=MSI\THINH;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />-->
 	</connectionStrings>
 
