--- a/ProjectDiamondShop/bin/ProjectDiamondShop.dll.config
+++ b/ProjectDiamondShop/bin/ProjectDiamondShop.dll.config
@@ -4,6 +4,20 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<configSections>
+		<section name="paypal" type="PayPal.SDKConfigHandler, PayPal" />
+	</configSections>
+	<!-- PayPal SDK settings -->
+	<paypal>
+		<settings>
+			<add name="mode" value="sandbox" />
+			<add name="connectionTimeout" value="360000" />
+			<add name="requestRetries" value="1" />
+			<add name="clientId" value="AfigmvfEwXym19XavLtkiLClgy6N2jafXzAQg3e_m8VDP3z6EgtQegTOCHfP78dqz-pRFZOuZIfQolel" />
+			<add name="clientSecret" value="EGVzeD0JsR_EPyyg-j1tIJnGf-YPVB-Kcb9xRIteLOJ_JmdgxWAHlzRQYJSbmbsL966uzowVKlvIRDye" />
+		</settings>
+	</paypal>
+
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0" />
 		<add key="webpages:Enabled" value="false" />
@@ -16,14 +30,7 @@
 		<add key="smtp:password" value="dmgxfkkvdbfbatbg" />
 		<add key="smtp:from" value="huyh69185@gmail.com" />
 
-		<!-- api vnpay config-->
-		<add key="vnp_Url" value="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"/>
-		<add key="vnp_Api" value="https://sandbox.vnpayment.vn/merchant_webapi/api/transaction"/>
-		<add key="vnp_TmnCode" value="TROHK8W7"/>
-		<add key="vnp_HashSecret" value="0CVB8T15YCKLQ1BWZR225OYAMILACDKN"/>
-		<add key="vnp_Returnurl" value="http://localhost:16262/vnpay_return.aspx"/>
 	</appSettings>
-
 	<connectionStrings>
 
 		<add name="DefaultConnection" connectionString="data source=DESKTOP-Q4GCJP9;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />
