--- a/ProjectDiamondShop/ProjectDiamondShop.csproj
+++ b/ProjectDiamondShop/ProjectDiamondShop.csproj
@@ -44,6 +44,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PayPal, Version=1.9.1.0, Culture=neutral, PublicKeyToken=5b4afc1ccaef40fb, processorArchitecture=MSIL">
+      <HintPath>..\packages\PayPal.1.9.1\lib\net451\PayPal.dll</HintPath>
+    </Reference>
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -367,12 +370,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Helpers\VnPayLibrary.cs" />
     <Compile Include="Models\Cart.cs" />
     <Compile Include="Models\CartItem.cs" />
     <Compile Include="Models\Diamond.cs" />
     <Compile Include="Models\ManagerViewModel.cs" />
     <Compile Include="Models\Order.cs" />
+    <Compile Include="Models\PaypalConfiguration.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\ViewOrderViewModel.cs" />
     <Compile Include="Models\Voucher.cs" />
@@ -419,6 +422,8 @@
     <Content Include="Views\Home\ViewOrder.cshtml" />
     <Content Include="Views\Manager\CreateVoucher.cshtml" />
     <Content Include="Views\Manager\Index.cshtml" />
+    <Content Include="Views\Order\FailureView.cshtml" />
+    <Content Include="Views\Order\SuccessView.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -428,7 +433,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\Payments\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
