--- a/ProjectDiamondShop/Web.config
+++ b/ProjectDiamondShop/Web.config
@@ -4,6 +4,20 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<configSections>
+		<section name="paypal" type="PayPal.SDKConfigHandler, PayPal" />
+	</configSections>
+	<!-- PayPal SDK settings -->
+	<paypal>
+		<settings>
+			<add name="mode" value="sandbox" />
+			<add name="connectionTimeout" value="360000" />
+			<add name="requestRetries" value="1" />
+			<add name="clientId" value="AfigmvfEwXym19XavLtkiLClgy6N2jafXzAQg3e_m8VDP3z6EgtQegTOCHfP78dqz-pRFZOuZIfQolel" />
+			<add name="clientSecret" value="EGVzeD0JsR_EPyyg-j1tIJnGf-YPVB-Kcb9xRIteLOJ_JmdgxWAHlzRQYJSbmbsL966uzowVKlvIRDye" />
+		</settings>
+	</paypal>
+
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0" />
 		<add key="webpages:Enabled" value="false" />
@@ -20,9 +34,9 @@
 
 	<connectionStrings>
 
-		<!--<add name="DefaultConnection" connectionString="data source=DESKTOP-Q4GCJP9;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />-->
+		<add name="DefaultConnection" connectionString="data source=DESKTOP-Q4GCJP9;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />
 		<!--Huấn Đã Đến-->
-		<add name="DefaultConnection" connectionString="data source=HUY\HUY;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />
+		<!--<add name="DefaultConnection" connectionString="data source=HUY\HUY;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />-->
 		<!--<add name="DefaultConnection" connectionString="data source=MSI\THINH;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />-->
 	</connectionStrings>
 
