--- a/ProjectDiamondShop/Web.config
+++ b/ProjectDiamondShop/Web.config
@@ -34,9 +34,9 @@
 
 	<connectionStrings>
 
-		<add name="DefaultConnection" connectionString="data source=DESKTOP-Q4GCJP9;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />
+		<!--<add name="DefaultConnection" connectionString="data source=DESKTOP-Q4GCJP9;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />-->
 		<!--Huấn Đã Đến-->
-		<!--<add name="DefaultConnection" connectionString="data source=HUY\HUY;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />-->
+		<add name="DefaultConnection" connectionString="data source=HUY\HUY;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />
 		<!--<add name="DefaultConnection" connectionString="data source=MSI\THINH;initial catalog=DiamondShopManagement;integrated security=True;" providerName="System.Data.SqlClient" />-->
 	</connectionStrings>
 
