--- a/DiamondShopRepositories/DiamondShopRepositories.csproj
+++ b/DiamondShopRepositories/DiamondShopRepositories.csproj
@@ -49,8 +49,12 @@
     <Compile Include="CookieCartRepository\ItemCartRepository.cs" />
     <Compile Include="DiamondRepository.cs" />
     <Compile Include="IDiamondRepository.cs" />
+    <Compile Include="OrderRepositories\IOrderRepository.cs" />
+    <Compile Include="OrderRepositories\ItemRepository.cs" />
+    <Compile Include="OrderRepositories\IItemRepository.cs" />
     <Compile Include="JewelrySettingRepository\IJewelrySettingRepository.cs" />
     <Compile Include="JewelrySettingRepository\JewelrySettingRepository.cs" />
+    <Compile Include="OrderRepositories\OrderRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserRepository\UserRepository.cs" />
     <Compile Include="UserRepository\IUserRepository.cs" />
@@ -65,8 +69,6 @@
       <Name>DiamondShopDAOs</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="NewFolder1\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
