--- a/DiamondShopServices/DiamondShopServices.csproj
+++ b/DiamondShopServices/DiamondShopServices.csproj
@@ -47,6 +47,10 @@
     <Compile Include="IDiamondService.cs" />
     <Compile Include="JewelrySettingService\IJewelrySettingService.cs" />
     <Compile Include="JewelrySettingService\JewelrySettingService.cs" />
+    <Compile Include="OrderServices\IItemService.cs" />
+    <Compile Include="OrderServices\IOrderServices.cs" />
+    <Compile Include="OrderServices\ItemService.cs" />
+    <Compile Include="OrderServices\OrderServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserService\IUserService.cs" />
     <Compile Include="UserService\UserService.cs" />
