Xoa bot du thua

--- a/ProjectDiamondShop/Web.config
+++ b/ProjectDiamondShop/Web.config
@@ -32,8 +32,8 @@
 		<add key="smtp:from" value="huyh69185@gmail.com" />
 	</appSettings>
 	<connectionStrings>
-		<add name="DiamondShopManagementEntities" connectionString="metadata=res://*/DiamondShopModels.csdl|res://*/DiamondShopModels.ssdl|res://*/DiamondShopModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NGUYEN\NGUYEN;initial catalog=DiamondShopManagement;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-		<add name="DefaultConnection" connectionString="metadata=res://*/DiamondShopModel.csdl|res://*/DiamondShopModel.ssdl|res://*/DiamondShopModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NGUYEN\NGUYEN;initial catalog=DiamondShopManagement;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="DiamondShopManagementEntities" connectionString="metadata=res://*/DiamondShopModels.csdl|res://*/DiamondShopModels.ssdl|res://*/DiamondShopModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HUY\HUY;initial catalog=DiamondShopManagement;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="DefaultConnection" connectionString="metadata=res://*/DiamondShopModel.csdl|res://*/DiamondShopModel.ssdl|res://*/DiamondShopModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HUY\HUY;initial catalog=DiamondShopManagement;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.7.2" />
