--- a/DiamondShopBOs/DiamondShopBOs.csproj
+++ b/DiamondShopBOs/DiamondShopBOs.csproj
@@ -65,6 +65,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DiamondShopModels.edmx</DependentUpon>
     </Compile>
+    <Compile Include="OrderViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="tblAccentStone.cs">
       <DependentUpon>DiamondShopModels.tt</DependentUpon>
