--- a/DiamondShopBOs/App.Config
+++ b/DiamondShopBOs/App.Config
@@ -17,8 +17,7 @@
 	<connectionStrings>
 		<!--<add name="DiamondShopManagementEntities" connectionString="metadata=res://*/DiamondShopModels.csdl|res://*/DiamondShopModels.ssdl|res://*/DiamondShopModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HUY\HUY;initial catalog=DiamondShopManagement;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 		<!--<add name="DiamondShopManagementEntities" connectionString="metadata=res://*/DiamondShopModels.csdl|res://*/DiamondShopModels.ssdl|res://*/DiamondShopModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HUY\HUY;initial catalog=DiamondShopManagement;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-		<add name="DiamondShopManagementEntities" connectionString="metadata=res://*/DiamondShopModels.csdl|res://*/DiamondShopModels.ssdl|res://*/DiamondShopModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=DiamondShopManagement;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	</connectionStrings>
+	<add name="DiamondShopManagementEntities" connectionString="metadata=res://*/DiamondShopModels.csdl|res://*/DiamondShopModels.ssdl|res://*/DiamondShopModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HUY\HUY;initial catalog=DiamondShopManagement;integrated security=True;multipleactiveresultsets=True;trustservercertificate=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
